--- a/SE_Project/UserInterfaceLayer/Pages/Index.cshtml
+++ b/SE_Project/UserInterfaceLayer/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Hello! :D";//This changes the tab par text
 }
 
 <div class="text-center">
