Inconsequential text Change

--- a/SE_Project/UserInterfaceLayer/Pages/Index.cshtml
+++ b/SE_Project/UserInterfaceLayer/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "TOP OF THE MORNIN";//This is to change the text on the tab
 }
 
 <div class="text-center">
