--- a/SE_Project/UserInterfaceLayer/Pages/Index.cshtml
+++ b/SE_Project/UserInterfaceLayer/Pages/Index.cshtml
@@ -1,10 +1,5 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "TOP OF THE MORNIN";//This is to change the text on the tab
+    ViewData["Title"] = "Login Page";//This is to change the text on the tab
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
