--- a/SE_Project/UserInterfaceLayer/Pages/Shared/_Layout.cshtml
+++ b/SE_Project/UserInterfaceLayer/Pages/Shared/_Layout.cshtml
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/UserInterfaceLayer.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body style="background-color:powderblue">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <img src="~/css/logo.jpg" width="100" height="100"/>
                 <a class="navbar-brand" asp-area="" asp-page="/Index">UserInterfaceLayer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
